# opendcu

./: .gitignore  Cargo.toml  Readme.md  azure-pipelines.yml  passageways.txt  profiles.txt  whitelist.txt
.github/workflows/: rust.yml
barracuda_base_modules/: Cargo.toml
barracuda_base_modules/src/: lib.rs
barracuda_base_modules/src/arm/console_input/: mod.rs
barracuda_base_modules/src/cfg/: cfgholder.rs  mod.rs
barracuda_base_modules/src/cfg/rest/: mod.rs
barracuda_base_modules/src/dcm/: mod.rs
barracuda_base_modules/src/dcm/trivial/: mod.rs
barracuda_base_modules/src/events/: mod.rs
barracuda_base_modules/src/io/: mod.rs
barracuda_base_modules/src/modcaps/: mod.rs
barracuda_base_modules/src/modulebase/: mod.rs
barracuda_base_modules/src/profile/: mod.rs  profile_checker.rs
barracuda_base_modules/src/sig/: mod.rs
barracuda_base_modules/src/sig/sigctrl/: mod.rs
barracuda_core/: Cargo.toml
barracuda_core/src/: lib.rs
barracuda_core/src/acm/: mod.rs
barracuda_core/src/acm/generic_whitelist/: mod.rs  profiles.rs  whitelist.rs
barracuda_core/src/arm/: mod.rs
barracuda_core/src/arm/console_input/: mod.rs
barracuda_core/src/arm/mfrc522/: mfrc522.rs  mod.rs
barracuda_core/src/cfg/: cfgholder.rs  mod.rs
barracuda_core/src/cfg/rest/: mod.rs
barracuda_core/src/core/: bootstage_helper.rs  broadcast_channel.rs  channel_manager.rs  event.rs  mod.rs  module_base.rs  supervisor.rs  timer.rs
barracuda_core/src/dcm/trivial/: mod.rs
barracuda_core/src/events/: mod.rs
barracuda_core/src/io/: mod.rs
barracuda_core/src/lowlevel/: spi.rs
barracuda_core/src/modcaps/: mod.rs
barracuda_core/src/profile/: mod.rs  profile_checker.rs
barracuda_core/src/sig/: mod.rs
barracuda_core/src/trace/: mod.rs  trace_helper.rs
barracuda_core/src/util/: datetime.rs  mod.rs
barracuda_hal/: Cargo.toml
barracuda_hal/src/: interrupt.rs  lib.rs
barracuda_modules/: Cargo.toml  advanced_dcm.md  readme.md
barracuda_modules/adcm/: Cargo.toml  manual.md
barracuda_modules/adcm/src/: lib.rs  passageway.rs
barracuda_modules/adcm/src/components/: accessgranted.rs  alarmrelay.rs  blockingcontact.rs  doorhandle.rs  dooropenerkey.rs  electricstrike.rs  framecontact.rs  mod.rs  outputcomponentbase.rs  releasecontact.rs  serialization_types.rs
barracuda_modules/adcm/src/components/input_components/: blockingcontact.rs  doorhandle.rs  dooropenerkey.rs  framecontact.rs  mod.rs  releasecontact.rs
barracuda_modules/adcm/src/components/output_components/: accessgranted.rs  alarmrelay.rs  electricstrike.rs  mod.rs  outputcomponentbase.rs
barracuda_modules/adcm/src/fsm/: Blocked.rs  Emergency.rs  NormalOperation.rs  ReleasedOnce.rs  ReleasedPermanently.rs  blocked.rs  emergency.rs  mod.rs  normal_operation.rs  released_once.rs  released_permanently.rs
barracuda_modules/generic_whitelist/: Cargo.toml  Licence.md  manual.md
barracuda_modules/generic_whitelist/src/: lib.rs  profiles.rs  whitelist.rs
barracuda_modules/mfrc522/: Cargo.toml
barracuda_modules/mfrc522/src/: error.rs  iso14443a.rs  lib.rs  mfrc522.rs  rfchip.rs
barracuda_modules/src/: lib.rs
barracuda_modules/src/mfrc522/: mod.rs
ci/: cargo-build.yml  cargo-test.yml
deno/: .gitignore  Cargo.toml  app.vue  build_script.ps1  index.html  index.js
deno/src/: lib.rs
src/: main.rs
src/Trace/: TraceHelper.rs  mod.rs  trace_helper.rs
src/acm/: mod.rs
src/cfg/: cfgholder.rs  mod.rs
src/core/: AtomicQueue.rs  BootstageHelper.rs  BroadcastChannel.rs  ChannelManager.rs  Checkpoint.rs  Event.rs  Supervisor.rs  atomic_queue.rs  bootstage_helper.rs  event.rs  (+5 more)
target_reference/: Cargo.toml  profiles.txt  whitelist.txt
target_reference/.cargo/: config
target_reference/src/: main.rs
target_reference/src/drivers/: mod.rs
target_reference/src/io/: mod.rs
target_rpi/: Cargo.toml
target_win64/: Cargo.toml
ui/: .gitignore  LICENSE_MIT  README.md  package-lock.json  package.json  run_script.ps1
wwwroot/: index.html  index.js  test.wasm
(+37 files in other folders)
