[package]
name = "barracuda_core"
version = "0.1.0"
authors = ["Rincewound <aaaargh@minddebugger.com>"]
edition = "2018"

[dependencies]
#barracuda_hal = { path = "../barracuda_hal" }
anymap = "0.12.1"
rouille = "3.0.0"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0"
chrono = "*"
strum = "0.18.0"
strum_macros = "0.18.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3