[package]
name = "barracuda_modules"
version = "0.1.0"
authors = ["rincewound <aaaargh@minddebugger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barracuda_core = { path = "../barracuda_core" }
barracuda_hal = { path = "../barracuda_hal" }