[package]
name = "barracuda-reference"
version = "0.1.0"
authors = ["rincewound <aaaargh@minddebugger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barracuda_core = { path = "../barracuda_core" }
barracuda_hal = { path = "../barracuda_hal" }
generic_whitelist = { path = "../barracuda_modules/generic_whitelist" }
mfrc522 = { path = "../barracuda_modules/mfrc522" }
adcm = { path = "../barracuda_modules/adcm" }
rppal = '*'