[package]
name = "AdvancedDoorControlModule"
version = "0.1.0"
authors = ["rincewound <aaaargh@minddebugger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barracuda_core = { path = "../../barracuda_core" }
#barracuda_hal = { path = "../../barracuda_hal" }
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0"
chrono = "*"
strum = "0.18.0"
strum_macros = "0.18.0"

[dependencies-dev]
double = "0.2.4"