[package]
name = "mfrc522"
version = "0.1.0"
authors = ["rincewound <aaaargh@minddebugger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
barracuda_core = { path = "../../barracuda_core" }
barracuda_hal = { path = "../../barracuda_hal" }
barracuda_base_modules = { path = "../../barracuda_base_modules" }
num_enum = "0.5.0"

[dev-dependencies]
mockall = "0.7.1"